Bug 689098: Only dash paths when the dashing would be visible.

If the ctm doesn't expand the dash lengths to be > 1 pixel, then
they can't be seen, so don't bother.